name:                ekg-wai
version:             0.1
synopsis:            Remote monitoring of processes, for WAI
description:
  This is a fork of Tibell's ekg package, written to run under WAI instead of
  Snap
homepage:            https://github.com/tsuraan/ekg-wai
license:             BSD3
license-file:        LICENSE
author:              Johan Tibell
maintainer:          tsuraan@gmail.com
category:            System, Network
build-type:          Simple
cabal-version:       >=1.6
data-files:          assets/index.html assets/monitor.js assets/monitor.css
                     assets/jquery.flot.min.js assets/jquery-1.6.4.min.js
                     assets/bootstrap-1.4.0.min.css
                     assets/chart_line_add.png assets/cross.png
extra-source-files:  LICENSE.icons LICENSE.javascript README.md
                     assets/jquery-1.6.4.js assets/jquery.flot.js
                     examples/Basic.hs

library
  exposed-modules:     System.Remote.Counter
                       System.Remote.Gauge
                       System.Remote.Label
                       System.Remote.Monitoring

  other-modules:       Paths_ekg_wai
                       System.Remote.Counter.Internal
                       System.Remote.Gauge.Internal
                       System.Remote.Label.Internal

  build-depends:       aeson < 0.7,
                       base >= 4.5 && < 5,
                       bytestring < 1.0,
                       containers < 0.6,
                       filepath < 1.4,
                       text < 0.12,
                       time < 1.5,
                       transformers < 0.4,
                       unordered-containers < 0.3,
                       wai < 1.4,
                       wai-middleware-route < 0.8,
                       wai-app-static < 1.4,
                       http-types,
                       system-filepath,
                       warp
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/tsuraan/ekg-wai.git
